// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AiGenerateTitlesAndDescriptionsUpsell renders the component correctly for custom props 1`] = `
<div>
  <div
    class="yst-px-10 yst-pt-10 yst-introduction-gradient yst-text-center"
  >
    <div
      class="yst-relative yst-w-full"
    >
      <div
        class="yst-relative yst-w-full yst-h-0 yst-pt-[56.25%] yst-overflow-hidden yst-rounded-md yst-drop-shadow-md yst-bg-white"
      >
        <div
          class="yst-absolute yst-w-full yst-h-full yst-top-0 yst-right-0"
        >
          <div
            class="wistia_embed wistia_async_vmrahpfjxp videoFoam=true"
          />
        </div>
      </div>
      <span
        class="yst-badge yst-badge--info yst-absolute yst-top-2 yst-end-4"
      >
        Beta
      </span>
    </div>
    <div
      class="yst-mt-6 yst-text-xs yst-font-medium yst-flex yst-flex-col yst-items-center"
    >
      <span
        class="yst-introduction-modal-uppercase yst-flex yst-gap-2 yst-items-center"
      >
        <span
          class="yst-logo-icon"
        />
        Custon new to text
      </span>
    </div>
  </div>
  <div
    class="yst-px-10 yst-pb-4 yst-flex yst-flex-col yst-items-center"
  >
    <div
      class="yst-mt-4 yst-mx-1.5 yst-text-center"
    >
      <h3
        class="yst-text-slate-900 yst-text-lg yst-font-medium"
      >
        Custom title
      </h3>
      <div
        class="yst-mt-2 yst-text-slate-600 yst-text-sm"
      >
        Let AI do some of the thinking for you and help you save time. Get high-quality suggestions for product titles and meta descriptions to make your content rank high and look good on social media. 
        <a
          class="yst-link yst-link--primary yst-inline-flex yst-items-center yst-gap-1 yst-no-underline yst-font-medium"
          href="https://example.com/learn-more"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn more
          <svg
            aria-hidden="true"
            class="yst-w-4 yst-h-4 rtl:yst-rotate-180"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="yst-sr-only"
          >
            (Opens in a new browser tab)
          </span>
        </a>
      </div>
    </div>
    <div
      class="yst-w-full yst-flex yst-flex-col yst-mt-10"
    >
      <a
        class="yst-button yst-button--upsell yst-button--extra-large yst-grow"
        data-action="load-nfd-ctb"
        data-ctb-id="f6a84663-465f-4cb5-8ba5-f7a6d72224b2"
        href="https://example.com/upsell"
        target="_blank"
      >
        <svg
          aria-hidden="true"
          class="yst--ms-1 yst-me-2 yst-h-5 yst-w-5"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 11V7a4 4 0 118 0m-4 8v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        Test Upsell Label
        <span
          class="yst-sr-only"
        >
          (Opens in a new browser tab)
        </span>
      </a>
      <div
        class="yst-root"
      >
        <div
          class="styles-module__gradientBorderButton--gGjJv"
        >
          <button
            class="yst-button yst-button--secondary yst-button--small yst-mt-2 yst-w-full yst-text-base yst-text-slate-800 yst-font-medium yst-h-11 hover:yst-bg-gradient-to-l hover:yst-from-[#E0E7FF] hover:yst-to-[#F3E5ED]"
            type="button"
          >
            <svg
              class=""
              data-testid="SparklesIcon"
              fill="none"
              height="17"
              viewBox="0 0 16 17"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.33284 2.96991V5.63658M1.99951 4.30324H4.66618M3.99951 12.3032V14.9699M2.66618 13.6366H5.33284M8.66618 2.96991L10.19 7.54134L13.9995 8.96991L10.19 10.3985L8.66618 14.9699L7.14237 10.3985L3.33284 8.96991L7.14237 7.54134L8.66618 2.96991Z"
                stroke="url(#gradient-pm6umqx)"
                stroke-linecap="round"
                stroke-linejoin="round"
                style="stroke-width: 1.33333px;"
              />
              <defs>
                <lineargradient
                  gradientUnits="userSpaceOnUse"
                  id="gradient-pm6umqx"
                  x1="1.99951"
                  x2="15.3308"
                  y1="2.96991"
                  y2="4.69764"
                >
                  <stop
                    offset="0%"
                    stop-color="#A61E69"
                  />
                  <stop
                    offset="100%"
                    stop-color="#6366F1"
                  />
                </lineargradient>
              </defs>
            </svg>
            Try for free
          </button>
        </div>
      </div>
    </div>
    Custom bundle note
    <a
      class="yst-button yst-button--tertiary yst-mt-4"
    >
      Close
    </a>
  </div>
</div>
`;

exports[`AiGenerateTitlesAndDescriptionsUpsell renders the component correctly for default props 1`] = `
<div>
  <div
    class="yst-px-10 yst-pt-10 yst-introduction-gradient yst-text-center"
  >
    <div
      class="yst-relative yst-w-full"
    >
      <div
        class="yst-relative yst-w-full yst-h-0 yst-pt-[56.25%] yst-overflow-hidden yst-rounded-md yst-drop-shadow-md yst-bg-white"
      >
        <div
          class="yst-absolute yst-w-full yst-h-full yst-top-0 yst-right-0"
        >
          <div
            class="wistia_embed wistia_async_vmrahpfjxp videoFoam=true"
          />
        </div>
      </div>
      <span
        class="yst-badge yst-badge--info yst-absolute yst-top-2 yst-end-4"
      >
        Beta
      </span>
    </div>
    <div
      class="yst-mt-6 yst-text-xs yst-font-medium yst-flex yst-flex-col yst-items-center"
    >
      <span
        class="yst-introduction-modal-uppercase yst-flex yst-gap-2 yst-items-center"
      >
        <span
          class="yst-logo-icon"
        />
        Yoast SEO Premium
      </span>
    </div>
  </div>
  <div
    class="yst-px-10 yst-pb-4 yst-flex yst-flex-col yst-items-center"
  >
    <div
      class="yst-mt-4 yst-mx-1.5 yst-text-center"
    >
      <h3
        class="yst-text-slate-900 yst-text-lg yst-font-medium"
      >
        Use AI to generate your titles & descriptions!
      </h3>
      <div
        class="yst-mt-2 yst-text-slate-600 yst-text-sm"
      >
        Let AI do some of the thinking for you and help you save time. Get high-quality suggestions for titles and meta descriptions to make your content rank high and look good on social media. 
        <a
          class="yst-link yst-link--primary yst-inline-flex yst-items-center yst-gap-1 yst-no-underline yst-font-medium"
          href="https://example.com/learn-more"
          rel="noopener noreferrer"
          target="_blank"
        >
          Learn more
          <svg
            aria-hidden="true"
            class="yst-w-4 yst-h-4 rtl:yst-rotate-180"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="yst-sr-only"
          >
            (Opens in a new browser tab)
          </span>
        </a>
      </div>
    </div>
    <div
      class="yst-w-full yst-flex yst-flex-col yst-mt-10"
    >
      <a
        class="yst-button yst-button--upsell yst-button--extra-large yst-grow"
        data-action="load-nfd-ctb"
        data-ctb-id="f6a84663-465f-4cb5-8ba5-f7a6d72224b2"
        href="https://example.com/upsell"
        target="_blank"
      >
        <svg
          aria-hidden="true"
          class="yst--ms-1 yst-me-2 yst-h-5 yst-w-5"
          fill="none"
          stroke="currentColor"
          stroke-width="2"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 11V7a4 4 0 118 0m-4 8v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2z"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
        Test Upsell Label
        <span
          class="yst-sr-only"
        >
          (Opens in a new browser tab)
        </span>
      </a>
      <div
        class="yst-root"
      >
        <div
          class="styles-module__gradientBorderButton--gGjJv"
        >
          <button
            class="yst-button yst-button--secondary yst-button--small yst-mt-2 yst-w-full yst-text-base yst-text-slate-800 yst-font-medium yst-h-11 hover:yst-bg-gradient-to-l hover:yst-from-[#E0E7FF] hover:yst-to-[#F3E5ED]"
            type="button"
          >
            <svg
              class=""
              data-testid="SparklesIcon"
              fill="none"
              height="17"
              viewBox="0 0 16 17"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3.33284 2.96991V5.63658M1.99951 4.30324H4.66618M3.99951 12.3032V14.9699M2.66618 13.6366H5.33284M8.66618 2.96991L10.19 7.54134L13.9995 8.96991L10.19 10.3985L8.66618 14.9699L7.14237 10.3985L3.33284 8.96991L7.14237 7.54134L8.66618 2.96991Z"
                stroke="url(#gradient-0d76qmt)"
                stroke-linecap="round"
                stroke-linejoin="round"
                style="stroke-width: 1.33333px;"
              />
              <defs>
                <lineargradient
                  gradientUnits="userSpaceOnUse"
                  id="gradient-0d76qmt"
                  x1="1.99951"
                  x2="15.3308"
                  y1="2.96991"
                  y2="4.69764"
                >
                  <stop
                    offset="0%"
                    stop-color="#A61E69"
                  />
                  <stop
                    offset="100%"
                    stop-color="#6366F1"
                  />
                </lineargradient>
              </defs>
            </svg>
            Try for free
          </button>
        </div>
      </div>
    </div>
    <a
      class="yst-button yst-button--tertiary yst-mt-4"
    >
      Close
    </a>
  </div>
</div>
`;
